--- a/.github/workflows/commit_deploy.yml
+++ b/.github/workflows/commit_deploy.yml
@@ -1,8 +1,8 @@
 name: Refresh
 
 on:
-  schedule:
-    - cron: "0 3 * * *" # Runs every day at 3am
+  push:
+    branches: [main]
 
 jobs:
   refresh:
