--- a/.github/workflows/commit_deploy.yml
+++ b/.github/workflows/commit_deploy.yml
@@ -12,12 +12,9 @@ jobs:
     steps:
       - name: Trigger GitHub pages rebuild
         run: |
-          curl -L \
-          -X POST \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer $USER_TOKEN"\
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/${{ github.repository }}/pages/builds
+          curl --fail --request POST \
+            --url https://api.github.com/repos/${{ github.repository }}/pages/builds \
+            --header "Authorization: Bearer $USER_TOKEN"
         env:
           # You must create a personal token with repo access as GitHub does
           # not yet support server-to-server page builds.
