--- a/hugo.yaml
+++ b/hugo.yaml
@@ -6,12 +6,18 @@ module:
   imports:
     - path: github.com/imfing/hextra
 
-markup:
   # allow raw html
+markup:
   goldmark:
     renderer:
       unsafe: true
-
+    extensions:
+      passthrough:
+        delimiters:
+          block:
+            - - $$
+              - $$
+        enable: true
   # enable hextra syntax highlight
   highlight:
     noClasses: false
